external-crates/move/crates/move-compiler/tests/development/signed_ints/invalid/signed_int_literal_too_large_i8.move
module a::m {
    fun bad() {
        128i8;
        let _x: i8 = 200i8;
        -129i8;
    }
}
